--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "silicon-audio-wave-19": {
+    "ngx-audio-wave-app": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
@@ -18,7 +18,7 @@
         "build": {
           "builder": "@angular/build:application",
           "options": {
-            "outputPath": "dist/silicon-audio-wave-19",
+            "outputPath": "dist/ngx-audio-wave-app",
             "index": "src/index.html",
             "browser": "src/main.ts",
             "polyfills": [],
@@ -68,10 +68,10 @@
           "builder": "@angular/build:dev-server",
           "configurations": {
             "production": {
-              "buildTarget": "silicon-audio-wave-19:build:production"
+              "buildTarget": "ngx-audio-wave-app:build:production"
             },
             "development": {
-              "buildTarget": "silicon-audio-wave-19:build:development"
+              "buildTarget": "ngx-audio-wave-app:build:development"
             }
           },
           "defaultConfiguration": "development"
