--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "silicon-audio-wave-19",
+  "name": "ngx-audio-wave-app",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -7,7 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "serve:ssr:silicon-audio-wave-19": "node dist/silicon-audio-wave-19/server/server.mjs",
+    "serve:ssr:ngx-audio-wave-app": "node dist/ngx-audio-wave-app/server/server.mjs",
     "library:build": "ng build ngx-audio-wave",
     "library:watch": "ng build ngx-audio-wave --watch"
   },
