--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "test": "ng test",
     "serve:ssr:ngx-audio-wave-app": "node dist/ngx-audio-wave-app/server/server.mjs",
     "library:build": "ng build ngx-audio-wave",
-    "library:watch": "ng build ngx-audio-wave --watch"
+    "library:watch": "ng build ngx-audio-wave --watch",
+    "format": "prettier --write .",
+    "format:check": "prettier --check ."
   },
   "private": true,
   "dependencies": {
@@ -31,9 +33,11 @@
     "@angular/build": "^20.3.5",
     "@angular/cli": "^20.3.5",
     "@angular/compiler-cli": "^20.3.4",
+    "@trivago/prettier-plugin-sort-imports": "^5.2.2",
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^18.18.0",
+    "angular-estree-parser": "^13.0.2",
     "jasmine-core": "~5.4.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
@@ -41,6 +45,8 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "ng-packagr": "^20.0.1",
+    "prettier": "^3.6.2",
+    "prettier-plugin-organize-attributes": "^1.0.0",
     "typescript": "~5.8.3"
   }
 }
