feat: try github pages

--- a/angular.json
+++ b/angular.json
@@ -54,6 +54,25 @@
               ],
               "outputHashing": "all"
             },
+            "github-pages": {
+              "baseHref": "/ngx-audio-wave/",
+              "budgets": [
+                {
+                  "type": "initial",
+                  "maximumWarning": "500kB",
+                  "maximumError": "1MB"
+                },
+                {
+                  "type": "anyComponentStyle",
+                  "maximumWarning": "4kB",
+                  "maximumError": "8kB"
+                }
+              ],
+              "outputHashing": "all",
+              "server": false,
+              "outputMode": "static",
+              "ssr": false
+            },
             "development": {
               "optimization": false,
               "extractLicenses": false,
