--- a/projects/ngx-audio-wave/package.json
+++ b/projects/ngx-audio-wave/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ngx-audio-wave",
-  "version": "20.2.6",
+  "version": "20.2.7",
   "description": "A modern, accessible audio wave visualization component for Angular 20+ with comprehensive keyboard navigation and screen reader support.",
   "main": "fesm2022/ngx-audio-wave.mjs",
   "module": "fesm2022/ngx-audio-wave.mjs",
@@ -29,7 +29,7 @@
     "type": "git",
     "url": "git+https://github.com/joldibaev/ngx-audio-wave.git"
   },
-  "homepage": "https://github.com/joldibaev/ngx-audio-wave#readme",
+  "homepage": "https://joldibaev.github.io/ngx-audio-wave/",
   "author": {
     "name": "Joldibaev Nurlan",
     "email": "nurlan@joldibaev.uz",
